Add a popup to display ping and nmap
