# server/app.module.ts
@@ -11,6 +11,7 @@ import { CheckIpController } from "./controllers/check-ip.controller.ts";
 import { OuiController } from "./controllers/oui.controller.ts";
 import { RouterConfigController } from "./controllers/router-config.controller.ts";
 import { PluginProxyController } from "./controllers/plugin-proxy.controller.ts";
+import { ProbeController } from "./controllers/probe.controller.ts";
 
 @Module({
   providers: [
@@ -30,6 +31,7 @@ import { PluginProxyController } from "./controllers/plugin-proxy.controller.ts"
     OuiController,
     RouterConfigController,
     PluginProxyController,
+    ProbeController,
   ],
 })
 export class AppModule {}
